# crabbit

./: .gitignore  CLAUDE.md  VIDEO_PLAYBACK_LINUX.md  electron-builder.yml  index.html  npm.sh  npx.sh  package-lock.json  package.json  release.sh  tsconfig.electron.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/skills/: release.md
.github/workflows/: release.yml
src/: App.tsx  index.css  invoke.ts  main.tsx  platform.ts  types.ts
src-electron/: config.ts  favorites.ts  ignored-users.ts  main.ts  preload.ts  saved.ts  video-cache.ts
src-electron/reddit/: client.ts  parser.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  faststart.rs  favorites.rs  lib.rs  main.rs  mpv_gtk.rs  mpvplayer.rs  saved.rs  videoserver.rs
src-tauri/src/reddit/: client.rs  mod.rs  parser.rs  types.rs
src/components/: ControlBar.tsx  EmbedSlide.tsx  ErrorDisplay.tsx  GallerySlide.tsx  HomePage.tsx  ImageSlide.tsx  LoadingSpinner.tsx  MediaDisplay.tsx  Notification.tsx  PostOverlay.tsx  SavedGridView.tsx  Sidebar.tsx  SlideshowView.tsx  SubredditAnalyzer.tsx  SubredditBar.tsx  VideoSlide.tsx  VideoTimeline.tsx
src/hooks/: useClickOutside.ts  useIdleHide.ts  useKeyboard.ts  useReddit.ts  useSavedPosts.ts  useSlideshow.ts  useVideoPlayback.ts  useZoomPan.ts
src/reddit/: client.ts  parser.ts
src/state/: context.ts  reducer.ts
