[package]
name = "crabbit"
version = "0.1.0"
description = "Reddit media slideshow viewer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "crabbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
percent-encoding = "2"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sanitize-filename = "0.5"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
tauri-plugin-dialog = "2"
axum = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
libmpv2 = "5.0"
gtk = { version = "0.18", features = ["v3_24"] }
gdk = "0.18"
glib = "0.18"
